# PolyGraphMT

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
data/raw/: ALPHA_DFT.csv  BANDGAP_DFT.csv  BULK_MD.csv  CP_EXP.csv  CP_GC.csv  DC_EXP.csv  DC_MD.csv  DIF_MD.csv  ETOTAL_DFT.csv  HOMO_DFT.csv  LUMO_DFT.csv  MU_DFT.csv  PCH4_EXP.csv  PCO2_EXP.csv  PE_MD.csv  PH2_EXP.csv  PHE_EXP.csv  PN2_EXP.csv  PO2_EXP.csv  POISSON_MD.csv  RG_MD.csv  RHO_EXP.csv  RHO_MD.csv  RI_MD.csv  SHEAR_MD.csv  TC_EXP.csv  TC_MD.csv  TD_MD.csv  TG_EXP.csv  TG_MD.csv  TM_EXP.csv  VISC_MD.csv  YOUNG_MD.csv
jobs/: submit_pred.sh  submit_seed.sh  submit_seed_single.sh
models/: README.md  best_model_map.json
models/multitask_models/: all_scalar_2023.pt  electronic_scalar_137.pt  g1_scalar_137.pt  g2_scalar_42.pt  g3_scalar_137.pt  g4_scalar_42.pt  mechanical_scalar_99.pt  other_scalar_42.pt  thermal_scalar_137.pt
models/single_models/: alpha_single_model_2023.pt  alpha_single_scalar_2023.pt  bandgap_single_model_99.pt  bandgap_single_scalar_99.pt  bulk_single_scalar_42.pt  cp_single_scalar_7.pt  dc_single_scalar_42.pt  dif_single_scalar_99.pt  etotal_single_model_7.pt  etotal_single_scalar_7.pt  homo_single_scalar_99.pt  lumo_single_scalar_42.pt  mu_single_scalar_137.pt  pch4_single_scalar_2023.pt  pco2_single_model_2023.pt  pco2_single_scalar_2023.pt  pe_single_model_2023.pt  pe_single_scalar_2023.pt  ph2_single_model_2023.pt  (+22 more)
scripts/: plot_hist_mt.py  plot_hist_st.py  predict.py  predict_from_models.py  summarize_results.py  train.py
(+12 files in other folders)
