[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polygraphmt"
version = "0.1.0"
description = "Multi-task, multi-fidelity polymer property prediction with graph neural networks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Salosiou" },
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "optuna>=3.5",
  "pandas>=2.0",
  "scipy>=1.10",
  "tqdm>=4.66",
]

[project.scripts]
polygraphmt-train = "polygraphmt.train:main"
polygraphmt-predict = "polygraphmt.predict:main"
polygraphmt-predict-from-models = "polygraphmt.predict_from_models:main"
polygraphmt-plot-hist-mt = "polygraphmt.plot_hist_mt:main"
polygraphmt-plot-hist-st = "polygraphmt.plot_hist_st:main"
polygraphmt-summarize-results = "polygraphmt.results_summary:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
